--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,14 @@ Django==3.2
 django-allauth==0.41.0
 django-countries==7.2.1
 django-crispy-forms==1.13.0
+django-phonenumber-field==6.0.0
 django-storages==1.12.3
+django-summernote==0.8.20.0
 gunicorn==20.1.0
 jmespath==0.10.0
 oauthlib==3.1.1
+phonenumbers==8.12.41
+phonenumberslite==8.12.41
 Pillow==9.0.0
 psycopg2-binary==2.9.3
 PyJWT==2.3.0
