--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 asgiref==3.4.1
+backports.zoneinfo==0.2.1
 boto3==1.20.37
 botocore==1.23.37
 dj-database-url==0.5.0
-Django==3.2
+Django==4.0.1
 django-allauth==0.41.0
 django-countries==7.2.1
 django-crispy-forms==1.13.0
